================================================================


RELEASE NOTES
=============


2.39.1 - March ??, 2010

    Corrected a bug in the Logtalk compiler that forced recompilation of
    source files when the "smart_compilation" flag was set to "on".

    Updated the SWI-Prolog and YAP config files in order to recognize and
    compile the proprietary directive create_prolog_flag/3.

    Updated the Windows installer in order to warn the user when no
    compatible Prolog compiler can be found.


2.39.0 - February 28, 2010

    Removed support for the following Prolog compilers: ALS Prolog, Amzi!
    Prolog, BinProlog, GNU Prolog, IF/Prolog, JIProlog, K-Prolog, LPA
    MacProlog, LPA WinProlog, MasterProlog, Open Prolog, Prolog II+, and
    Quintus Prolog. Only Amzi! Prolog, GNU Prolog, and Quintus Prolog seem
    to be actively maintained. Amzi! Prolog ignores the official and de
    facto Prolog standards. GNU Prolog is currently missing crucial support
    for the standard directive multifile/1. Quintus Prolog is superseded by
    SICStus Prolog (and required hacks to the Logtalk compiler that rendered
    it incompatible with all the other Prolog compilers).

    Removed support for all Prolog compilers that don't support the ISO Prolog
    standard directive multifile/1. Removed the "multifile_directive" config
    flag from the config files of supported Prolog compilers.

    Reintroduced parametric categories. Changed semantics of the parameter/2
    built-in execution-context method when used in category predicates to
    access the category parameters instead of the parameters of the object
    importing the category. This change provides safer and more robust use
    of parameter/2 calls in categories. 

    Improved compile-time error-checking of calls to the parameter/2 built-in
    execution-context method

    Removed the meta-predicate compilation safety rule that required the