@@ -14,7 +14,7 @@
 <li>Support</li>
 <li>Installation</li>
 <li>Customization</li>
-<li>Quick start</li>
+<li>Running</li>
 <li>Documentation</li>
 <li>Upgrading</li>
 <li>Citations</li>
@@ -78,7 +78,7 @@ using four-space tabs.</p>
 <p>The file <code>CUSTOMIZE.txt</code> provides detailed instructions for customizing the  
 Logtalk installation and working environment.</p>
 
-<h2>7. Quick start</h2>
+<h2>7. Running</h2>
 
 <p>The file <code>QUICK_START.txt</code> provides quick instructions for those of you in a hurry 
 to run Logtalk, provided that your favorite Prolog compiler is supported.</p>
