@@ -21,6 +21,11 @@ RELEASE NOTES
     Updated the SWI-Prolog and YAP config files in order to recognize and
     compile the proprietary directive create_prolog_flag/3.
 
+    Added a logtalk_library_path/2 entry for the library "home" (the user
+    home directory) when running on Windows operating-systems. However, 
+    this definition only works for some back-end Prolog compilers due to
+    bugs in expanding paths containing more than one environment variable.
+
     Updated the Windows installer in order to warn the user when no
     compatible Prolog compiler can be found.
 
